// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLink component renders correctly if link has sub-links 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor={null}
    depth={0}
    expanded={null}
    hash={null}
    sub={
      Array [
        Object {
          "id": "1",
          "name": "child",
        },
      ]
    }
    toggleExpand={[Function]}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative flex items-center justify-between sb-item sb-item-active"
        >
          <a
            className="white text-decoration-none truncate"
            href="#!"
          >
            link text
          </a>
        </li>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>,
            null,
          ],
          "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "white text-decoration-none truncate",
              "href": "#!",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          null,
        ],
        "type": "li",
      },
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative flex items-center justify-between sb-item sb-item-active"
          >
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>
          </li>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="white text-decoration-none truncate"
                href="#!"
              >
                link text
              </a>,
              null,
            ],
            "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "link text",
                "className": "white text-decoration-none truncate",
                "href": "#!",
              },
              "ref": null,
              "rendered": "link text",
              "type": "a",
            },
            null,
          ],
          "type": "li",
        },
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders correctly if link is active 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor="moop"
    depth={0}
    expanded={null}
    hash="moop"
    sub={Array []}
    toggleExpand={[Function]}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative flex items-center justify-between sb-item sb-item-active"
        >
          <a
            className="white text-decoration-none truncate"
            href="#moop"
          >
            link text
          </a>
        </li>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>,
            null,
          ],
          "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "white text-decoration-none truncate",
              "href": "#moop",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          null,
        ],
        "type": "li",
      },
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative flex items-center justify-between sb-item sb-item-active"
          >
            <a
              className="white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>
          </li>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="white text-decoration-none truncate"
                href="#moop"
              >
                link text
              </a>,
              null,
            ],
            "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "link text",
                "className": "white text-decoration-none truncate",
                "href": "#moop",
              },
              "ref": null,
              "rendered": "link text",
              "type": "a",
            },
            null,
          ],
          "type": "li",
        },
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders correctly if link is collapsed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor={null}
    depth={0}
    expanded={false}
    hash={null}
    sub={
      Array [
        Object {
          "id": "1",
          "name": "child",
        },
      ]
    }
    toggleExpand={[Function]}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative flex items-center justify-between sb-item sb-item-active"
        >
          <a
            className="white text-decoration-none truncate"
            href="#!"
          >
            link text
          </a>
          <button
            aria-label="Expand"
            className="btn px-tiny py0 white"
            onClick={[Function]}
          >
            <FontAwesomeIcon$1
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f078",
                    "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                  ],
                  "iconName": "chevron-down",
                  "prefix": "fas",
                }
              }
              listItem={false}
              mask={null}
              name=""
              pull={null}
              pulse={false}
              rotation={null}
              size="sm"
              spin={false}
              symbol={false}
              transform={null}
            />
          </button>
        </li>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>,
            <button
              aria-label="Expand"
              className="btn px-tiny py0 white"
              onClick={[Function]}
            >
              <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                symbol={false}
                transform={null}
              />
            </button>,
          ],
          "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "white text-decoration-none truncate",
              "href": "#!",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-label": "Expand",
              "children": <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                symbol={false}
                transform={null}
              />,
              "className": "btn px-tiny py0 white",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "border": false,
                "className": "",
                "fixedWidth": false,
                "flip": null,
                "icon": Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f078",
                    "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                  ],
                  "iconName": "chevron-down",
                  "prefix": "fas",
                },
                "listItem": false,
                "mask": null,
                "name": "",
                "pull": null,
                "pulse": false,
                "rotation": null,
                "size": "sm",
                "spin": false,
                "symbol": false,
                "transform": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "button",
          },
        ],
        "type": "li",
      },
      false,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative flex items-center justify-between sb-item sb-item-active"
          >
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>
            <button
              aria-label="Expand"
              className="btn px-tiny py0 white"
              onClick={[Function]}
            >
              <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                symbol={false}
                transform={null}
              />
            </button>
          </li>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="white text-decoration-none truncate"
                href="#!"
              >
                link text
              </a>,
              <button
                aria-label="Expand"
                className="btn px-tiny py0 white"
                onClick={[Function]}
              >
                <FontAwesomeIcon$1
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        448,
                        512,
                        Array [],
                        "f078",
                        "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                      ],
                      "iconName": "chevron-down",
                      "prefix": "fas",
                    }
                  }
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size="sm"
                  spin={false}
                  symbol={false}
                  transform={null}
                />
              </button>,
            ],
            "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "link text",
                "className": "white text-decoration-none truncate",
                "href": "#!",
              },
              "ref": null,
              "rendered": "link text",
              "type": "a",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-label": "Expand",
                "children": <FontAwesomeIcon$1
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        448,
                        512,
                        Array [],
                        "f078",
                        "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                      ],
                      "iconName": "chevron-down",
                      "prefix": "fas",
                    }
                  }
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size="sm"
                  spin={false}
                  symbol={false}
                  transform={null}
                />,
                "className": "btn px-tiny py0 white",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "border": false,
                  "className": "",
                  "fixedWidth": false,
                  "flip": null,
                  "icon": Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f078",
                      "M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z",
                    ],
                    "iconName": "chevron-down",
                    "prefix": "fas",
                  },
                  "listItem": false,
                  "mask": null,
                  "name": "",
                  "pull": null,
                  "pulse": false,
                  "rotation": null,
                  "size": "sm",
                  "spin": false,
                  "symbol": false,
                  "transform": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "button",
            },
          ],
          "type": "li",
        },
        false,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders correctly if link is expanded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor={null}
    depth={0}
    expanded={true}
    hash={null}
    sub={
      Array [
        Object {
          "id": "1",
          "name": "child",
        },
      ]
    }
    toggleExpand={[Function]}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative flex items-center justify-between sb-item sb-item-active"
        >
          <a
            className="white text-decoration-none truncate"
            href="#!"
          >
            link text
          </a>
          <button
            aria-label="Collapse"
            className="btn px-tiny py0 white"
            onClick={[Function]}
          >
            <FontAwesomeIcon$1
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f077",
                    "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                  ],
                  "iconName": "chevron-up",
                  "prefix": "fas",
                }
              }
              listItem={false}
              mask={null}
              name=""
              pull={null}
              pulse={false}
              rotation={null}
              size="sm"
              spin={false}
              symbol={false}
              transform={null}
            />
          </button>
        </li>,
        Array [
          <SidebarLink
            anchor="1"
            depth={1}
            expanded={null}
            hash={null}
            sub={Array []}
            toggleExpand={[Function]}
          >
            child
          </SidebarLink>,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>,
            <button
              aria-label="Collapse"
              className="btn px-tiny py0 white"
              onClick={[Function]}
            >
              <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f077",
                      "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                    ],
                    "iconName": "chevron-up",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                symbol={false}
                transform={null}
              />
            </button>,
          ],
          "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "white text-decoration-none truncate",
              "href": "#!",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "aria-label": "Collapse",
              "children": <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f077",
                      "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                    ],
                    "iconName": "chevron-up",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                symbol={false}
                transform={null}
              />,
              "className": "btn px-tiny py0 white",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "border": false,
                "className": "",
                "fixedWidth": false,
                "flip": null,
                "icon": Object {
                  "icon": Array [
                    448,
                    512,
                    Array [],
                    "f077",
                    "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                  ],
                  "iconName": "chevron-up",
                  "prefix": "fas",
                },
                "listItem": false,
                "mask": null,
                "name": "",
                "pull": null,
                "pulse": false,
                "rotation": null,
                "size": "sm",
                "spin": false,
                "symbol": false,
                "transform": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "button",
          },
        ],
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "anchor": "1",
          "children": "child",
          "depth": 1,
          "expanded": null,
          "hash": null,
          "sub": Array [],
          "toggleExpand": [Function],
        },
        "ref": null,
        "rendered": "child",
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative flex items-center justify-between sb-item sb-item-active"
          >
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>
            <button
              aria-label="Collapse"
              className="btn px-tiny py0 white"
              onClick={[Function]}
            >
              <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f077",
                      "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                    ],
                    "iconName": "chevron-up",
                    "prefix": "fas",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size="sm"
                spin={false}
                symbol={false}
                transform={null}
              />
            </button>
          </li>,
          Array [
            <SidebarLink
              anchor="1"
              depth={1}
              expanded={null}
              hash={null}
              sub={Array []}
              toggleExpand={[Function]}
            >
              child
            </SidebarLink>,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="white text-decoration-none truncate"
                href="#!"
              >
                link text
              </a>,
              <button
                aria-label="Collapse"
                className="btn px-tiny py0 white"
                onClick={[Function]}
              >
                <FontAwesomeIcon$1
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        448,
                        512,
                        Array [],
                        "f077",
                        "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                      ],
                      "iconName": "chevron-up",
                      "prefix": "fas",
                    }
                  }
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size="sm"
                  spin={false}
                  symbol={false}
                  transform={null}
                />
              </button>,
            ],
            "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "link text",
                "className": "white text-decoration-none truncate",
                "href": "#!",
              },
              "ref": null,
              "rendered": "link text",
              "type": "a",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-label": "Collapse",
                "children": <FontAwesomeIcon$1
                  border={false}
                  className=""
                  fixedWidth={false}
                  flip={null}
                  icon={
                    Object {
                      "icon": Array [
                        448,
                        512,
                        Array [],
                        "f077",
                        "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                      ],
                      "iconName": "chevron-up",
                      "prefix": "fas",
                    }
                  }
                  listItem={false}
                  mask={null}
                  name=""
                  pull={null}
                  pulse={false}
                  rotation={null}
                  size="sm"
                  spin={false}
                  symbol={false}
                  transform={null}
                />,
                "className": "btn px-tiny py0 white",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "border": false,
                  "className": "",
                  "fixedWidth": false,
                  "flip": null,
                  "icon": Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f077",
                      "M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z",
                    ],
                    "iconName": "chevron-up",
                    "prefix": "fas",
                  },
                  "listItem": false,
                  "mask": null,
                  "name": "",
                  "pull": null,
                  "pulse": false,
                  "rotation": null,
                  "size": "sm",
                  "spin": false,
                  "symbol": false,
                  "transform": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "button",
            },
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "anchor": "1",
            "children": "child",
            "depth": 1,
            "expanded": null,
            "hash": null,
            "sub": Array [],
            "toggleExpand": [Function],
          },
          "ref": null,
          "rendered": "child",
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders correctly in the default case 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor={null}
    depth={0}
    expanded={null}
    hash={null}
    sub={Array []}
    toggleExpand={[Function]}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative flex items-center justify-between sb-item sb-item-active"
        >
          <a
            className="white text-decoration-none truncate"
            href="#!"
          >
            link text
          </a>
        </li>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>,
            null,
          ],
          "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "white text-decoration-none truncate",
              "href": "#!",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          null,
        ],
        "type": "li",
      },
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative flex items-center justify-between sb-item sb-item-active"
          >
            <a
              className="white text-decoration-none truncate"
              href="#!"
            >
              link text
            </a>
          </li>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="white text-decoration-none truncate"
                href="#!"
              >
                link text
              </a>,
              null,
            ],
            "className": "mb1 relative flex items-center justify-between sb-item sb-item-active",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "link text",
                "className": "white text-decoration-none truncate",
                "href": "#!",
              },
              "ref": null,
              "rendered": "link text",
              "type": "a",
            },
            null,
          ],
          "type": "li",
        },
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SidebarLink component renders link correctly if an anchor is given 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SidebarLink
    anchor="moop"
    depth={0}
    expanded={null}
    hash={null}
    sub={Array []}
    toggleExpand={[Function]}
  >
    link text
  </SidebarLink>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <li
          className="mb1 relative flex items-center justify-between sb-item"
        >
          <a
            className="white text-decoration-none truncate"
            href="#moop"
          >
            link text
          </a>
        </li>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              className="white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>,
            null,
          ],
          "className": "mb1 relative flex items-center justify-between sb-item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "link text",
              "className": "white text-decoration-none truncate",
              "href": "#moop",
            },
            "ref": null,
            "rendered": "link text",
            "type": "a",
          },
          null,
        ],
        "type": "li",
      },
      null,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <li
            className="mb1 relative flex items-center justify-between sb-item"
          >
            <a
              className="white text-decoration-none truncate"
              href="#moop"
            >
              link text
            </a>
          </li>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                className="white text-decoration-none truncate"
                href="#moop"
              >
                link text
              </a>,
              null,
            ],
            "className": "mb1 relative flex items-center justify-between sb-item",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "link text",
                "className": "white text-decoration-none truncate",
                "href": "#moop",
              },
              "ref": null,
              "rendered": "link text",
              "type": "a",
            },
            null,
          ],
          "type": "li",
        },
        null,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
